--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.28.6",
     "daisyui": "^4.7.3",
     "firebase": "^10.9.0",
     "react": "^18.2.0",
