--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.28.6",
+    "axios": "^1.6.8",
     "daisyui": "^4.7.3",
     "firebase": "^10.9.0",
     "react": "^18.2.0",
